[RM-004] post create 에서도 도메인 객체 사용하도록 변경